src/components/map/style.css
@keyframes waiting {
  0% {
    transform: translateX(0);
    width: 0;
  }

  50% {
    transform: translateX(0);
    width: 100%;
  }

  100% {
    transform: translateX(100%);
  }
}

.mapContainer {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: all 0.5s;
}

.mapLoading {
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  width: 100%;
  height: 100%;
  align-items: center;
  justify-content: center;
  color: #4b4b4b;
  font-weight: 600;
}

.mapView {
  display: flex;
  flex: 1;
  background-color: #e5e3df;
  opacity: 0;
  transform: scale(1.4);
  transition: all 0.6s;

  &::before,
  &::after {
    pointer-events: none;
  }

  &::before {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 10px;
    height: 10px;
    background-color: rgba(0,0,0,0.3);
    border-radius: 5px;
    content: '';
    transform: translate(-50%,calc(-50% - 20px));
    z-index: 1;
    transition: all 0.2s;
  }

  &::after {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 28px;
    height: 40px;
    transform: translate(-50%,calc(-50% - 40px));
    content: '';
    border-radius: 10px;
    background-image: url('../../assets/img/marker.svg');
    transition: all 0.2s;
    background-position: center center;
    background-repeat: no-repeat;
    z-index: 2;
  }

  &.active {
    &::before {
      transform: translate(-50%,calc(-50% - 20px))scale(1.2);
      opacity: 0.3;
    }
    
    &::after {
      transform: translate(-50%,calc(-50% - 50px));
    }
  }

  &.visible {
    transform: scale(1);
    opacity: 1;
  }
}

.loadingIndicator {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background-color: #1111c4;
  animation: waiting 1s infinite;

  &.inApp {
    top: auto;
    bottom: 0;
  }
}

